# football-frame

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
footballframe/: __init__.py  coach.py  league.py  player.py  schedule.py  season.py  simulator.py  team.py  team_group.py
footballframe/stats/: __init__.py  categories.py  defense.py  kicking.py  passing.py  punting.py  receiving.py  returning.py  rushing.py  scoring.py  stats.py  team.py  types.py
